# rag_clean

./: .dockerignore  .env.example  .gitignore  AUTO_ZIP_GUIDE.md  AWESOME_COPILOT_INSTALLATION_SUMMARY.md  AWESOME_COPILOT_QUICK_REF.md  AWESOME_COPILOT_SETUP.md  CELLS_17_21_PRODUCTION_READY_REPORT.md  CHUNKER_OPTIMIZATION_GUIDE.md  COLLECTION_STRUCTURE_FIX.md  CORRECTED_PROCESSORS_USAGE_GUIDE.md  Copilot-Processing.md  DEPLOYMENT_PREP.md  DISPLAY_BUG_FIX.md  DOCLING_ANALYSIS.md  DOCLING_FIXES_APPLIED.md  DOCLING_OPTIMIZATION_SUMMARY.md  DOCLING_QUICK_FIXES.md  DOCLING_WORKFLOW.md  DOCS_PROCESSING_COMPLETE_REPORT.md  Dockerfile.mcp  EMBEDDING_LOGGING_ENHANCEMENTS.md  EMBEDDING_LOGGING_QUICK_REFERENCE.md  EMBEDDING_RERANKING_OPTIMIZATION.md  EMBEDDING_SCRIPT_ENHANCEMENT_SUMMARY.md  FINAL_STATUS.md  GEMINI.md  IMPLEMENTATION_AUDIT.md  IMPLEMENTATION_SUCCESS_REPORT.md  JINA_RERANKER_V3_INTEGRATION.md  KAGGLE_EMBEDDING_TROUBLESHOOTING.md  KAGGLE_FIXES_SUMMARY.md  KAGGLE_INSTALL_COMMANDS.md  KAGGLE_INVOCATION_GUIDE.md  KAGGLE_MODEL_DOWNLOAD_COMMANDS.md  KAGGLE_PROCESSING_GUIDE.md  KAGGLE_QUICKSTART.md  KAGGLE_QUICK_REFERENCE.py  KAGGLE_SCRIPTS_GUIDE.md  KAGGLE_SENTENCE_TRANSFORMERS_UPGRADE.md  (+91 more)
.ai/: story-1.4-gate-fix-summary.md  todo_list.yaml
.bmad-core/: install-manifest.yaml
.github/: copilot-instructions.md
.kilocode/: mcp.json
Chunked/: processing_summary.json
DOCS_CHUNKS_OUTPUT/: docs_processing_complete_summary.json
Docs/: API_REFERENCE_V5.md  EMBEDDING_PROCESS_FLOW.md  EMBEDDING_SUMMARY_SCHEMA.md  EXCLUSIVE_ENSEMBLE_MODE.md  SPARSE_OUTPUT_GUIDE.md  SPLADE_RICH_PROGRESS_FIX.md  V5_DEPLOYMENT_GUIDE.md  V5_TUTORIAL.md  architecture.md  prd.md
ENHANCED_CHUNKS_OUTPUT/: _docling-project_docling_1-overview_enhanced_chunks.json  _docling-project_docling_1.1-installation_enhanced_chunks.json  _docling-project_docling_1.2-quick-start_enhanced_chunks.json  _docling-project_docling_10-deployment_enhanced_chunks.json  _docling-project_docling_10.1-docker-deployment_enhanced_chunks.json  _docling-project_docling_10.2-model-artifacts-management_enhanced_chunks.json  _docling-project_docling_2-core-architecture_enhanced_chunks.json  _docling-project_docling_2.1-document-conversion-flow_enhanced_chunks.json  _docling-project_docling_2.2-doclingdocument-data-model_enhanced_chunks.json  _docling-project_docling_2.3-configuration-and-pipeline-options_enhanced_chunks.json  _docling-project_docling_2.4-format-detection-and-routing_enhanced_chunks.json  _docling-project_docling_3-document-backends_enhanced_chunks.json  _docling-project_docling_3.1-pdf-processing-backends_enhanced_chunks.json  _docling-project_docling_3.2-office-document-backends_enhanced_chunks.json  _docling-project_docling_3.3-web-and-markup-backends_enhanced_chunks.json  _docling-project_docling_enhanced_chunks.json
Embed/: embedding_summary.json
Embeddings/: cuda_debug_snapshot.json  embedding_summary.json
Raw/: API_REFERENCE_V5.md  EMBEDDING_SUMMARY_SCHEMA.md  EMBED_V6_ARCHITECTURE.md  EMBED_V6_DOCUMENTATION_INDEX.md  EMBED_V6_QUICK_REFERENCE.md  EMBED_V6_VISUAL_FLOW.md  EXCLUSIVE_ENSEMBLE_MODE.md  V5_DEPLOYMENT_GUIDE.md
ULTIMATE_QDRANT_SYSTEM/: CONSOLIDATED_SUMMARY.json  consolidated_ultimate_system.py  query_qdrant_insights.py
backup_references/: Dockerfile.fastmcp-api  FASTMCP_SERVER_GUIDE.md  README_FASTMCP_API.md  ULTIMATE_CHUNKER_COMPLETE.md  delete_all_collections.py  docker-compose.fastmcp-api.yml  fastapi_app_only.py  fastapi_simple.py  fastmcp_fastapi_integration.py  inspect_collection.py  k8s-deployment.yaml  list_collections.py  process_docling.py  process_fast_docs.py  process_pydantic.py  process_qdrant.py  process_sentence_transformers.py  production_ultimate_chunker.py  (+3 more)
(+4283 files in other folders)
